Correct location for the files and the name of the dance.

--- a/remote-control/nao_server/public/index.html
+++ b/remote-control/nao_server/public/index.html
@@ -90,12 +90,12 @@
           <button id="btnMarcarena" value="dance_marcarena" onclick="sendButtonMessage(this.value)" class="taskBtn">Marcarena</button>
           <button id="btnElectroSwing" value="dance_electroswing" onclick="sendButtonMessage(this.value)" class="taskBtn">Electro Swing</button>
           <button id="btnGetLucky" value="dance_getlucky" onclick="sendButtonMessage(this.value)" class="taskBtn">Get Lucky</button>
-          <button id="btnThriller" value="dance_thriller" onclick="sendButtonMessage(this.value)" class="taskBtn">Thriller</button>
+          <button id="btnThriller" value="dance_spooky" onclick="sendButtonMessage(this.value)" class="taskBtn">Spooky Dance</button>
           <button id="btnWheels" value="dance_softrobot" onclick="sendButtonMessage(this.value)" class="taskBtn">Soft robot</button>
           <button id="btnWheels" value="dance_wheels" onclick="sendButtonMessage(this.value)" class="taskBtn">Wheels on the Bus</button>
           <button id="btnHead" value="dance_hskt" onclick="sendButtonMessage(this.value)" class="taskBtn">Head, Shoulders, Knees, and Toes</button>
           <button id="btnStars" value="dance_stars" onclick="sendButtonMessage(this.value)" class="taskBtn">Twinkle, Twinkle Little Star</button>
-          <button id="btnHush" value="dance_abc" onclick="sendButtonMessage(this.value)" class="taskBtn">ABC Songs</button>
+          <button id="btnHush" value="dance_abc" onclick="sendButtonMessage(this.value)" class="taskBtn">ABC Song</button>
         </div>
       </section>
 
