Disable Get Lucky for now since it is not available on NAO 5.

--- a/remote-control/nao_server/public/index.html
+++ b/remote-control/nao_server/public/index.html
@@ -89,7 +89,7 @@
           <button id="btnDiscoDance" value="dance_disco" onclick="sendButtonMessage(this.value)" class="taskBtn">Disco</button>
           <button id="btnMarcarena" value="dance_marcarena" onclick="sendButtonMessage(this.value)" class="taskBtn">Marcarena</button>
           <button id="btnElectroSwing" value="dance_electroswing" onclick="sendButtonMessage(this.value)" class="taskBtn">Electro Swing</button>
-          <button id="btnGetLucky" value="dance_getlucky" onclick="sendButtonMessage(this.value)" class="taskBtn">Get Lucky</button>
+          <!-- <button id="btnGetLucky" value="dance_getlucky" onclick="sendButtonMessage(this.value)" class="taskBtn">Get Lucky</button> -->
           <button id="btnThriller" value="dance_spooky" onclick="sendButtonMessage(this.value)" class="taskBtn">Spooky Dance</button>
           <button id="btnWheels" value="dance_softrobot" onclick="sendButtonMessage(this.value)" class="taskBtn">Soft robot</button>
           <button id="btnWheels" value="dance_wheels" onclick="sendButtonMessage(this.value)" class="taskBtn">Wheels on the Bus</button>
