Add cyberbook cheer button

--- a/remote-control/nao_server/public/index.html
+++ b/remote-control/nao_server/public/index.html
@@ -77,6 +77,7 @@
           <button id="btnNextTask" value="next_task" onclick="sendButtonMessage(this.value)" class="taskBtn">Neste oppgave</button>
           <button id="btnTryAgain" value="try_again" onclick="sendButtonMessage(this.value)" class="taskBtn">Prøv igjen</button>
           <button id="btnSmallCheer" value="small_cheer" onclick="sendButtonMessage(this.value)" class="taskBtn">Riktig!</button>
+          <button id="btnCyberCheer" value="cyberbook_cheer" onclick="sendButtonMessage(this.value)" class="taskBtn">Cyberbook Cheer!</button>
         </div>
       </section>
 
