--- a/remote-control/nao_server/public/index.html
+++ b/remote-control/nao_server/public/index.html
@@ -143,7 +143,7 @@
             Autonomous Life
           </button>
 	</div>
-
+        <button id="btnStop" value="emergency_stop" onclick="sendButtonMessage(this.value, oobsocket)" class="checkBtn">STOP!</button>
       </section>
     </section>
   </main>
