Style the button a little better.

--- a/remote-control/nao_server/public/index.html
+++ b/remote-control/nao_server/public/index.html
@@ -142,8 +142,10 @@
             </span>
             Autonomous Life
           </button>
+        </div>
+        <div class="div-flex">
+          <button id="btnStop" value="emergency_stop" onclick="sendButtonMessage(this.value, oobsocket)" class="systemBtn">STOP!</button>
 	</div>
-        <button id="btnStop" value="emergency_stop" onclick="sendButtonMessage(this.value, oobsocket)" class="checkBtn">STOP!</button>
       </section>
     </section>
   </main>
