--- a/remote-control/nao_server/public/index.html
+++ b/remote-control/nao_server/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html lang="nb-NO">
+<html lang="en-US">
 
   <head>
     <meta charset="UTF-8">
@@ -10,13 +10,13 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
     <meta name="viewport" content="initial-scale=1.0, width=device-width">
-    <title>NAO fjernkontroll</title>
+    <title>NAO Remote Control</title>
   </head>
 
 <body>
   <main id="rectangleWrap" class="container">
     <section>
-      <h1>NAO fjernkontroll</h1>
+      <h1>NAO Remote Control</h1>
       <div>
         <!-- 
 
@@ -40,7 +40,7 @@
         <!-- </div> -->
 
       <section>
-        <h2>Holdning</h2>
+        <h2>Attitude</h2>
         <div class="div-flex">
           <button id="btnStand" value="wake_up" onclick="sendButtonMessage(this.value)" class="postureBtn">Stå opp</button>
 	  <button id="btnRaiseHand" value="raise_hand" onclick="sendButtonMessage(this.value)" class="postureBtn">Rekk opp/ned hånd</button>
@@ -51,57 +51,49 @@
       <section>
 	<h2>Start</h2>
         <div id="startStopBtns" class="div-flex">
-          <button id="btnGreeting" value="greet" onclick="sendButtonMessage(this.value)" class="greetBtn">Hilse</button>
-          <button id="btnStop" value="goodbye" onclick="sendButtonMessage(this.value)" class="greetBtn">Avslutte</button>
+          <button id="btnGreeting" value="greet" onclick="sendButtonMessage(this.value)" class="greetBtn">Greetings</button>
+          <button id="btnStop" value="goodbye" onclick="sendButtonMessage(this.value)" class="greetBtn">Goodbye</button>
         </div>
       </section>
 
       <section>
-	<h2>Snakk</h2>
+	<h2>Talk</h2>
         <div class="div-flex">
-	  <button id="btnThinking" value="thinking" onclick="sendButtonMessage(this.value)" class="taskBtn">Tenker…</button><br>
-	  <button id="btnInteresting" value="exciting_fun" onclick="sendButtonMessage(this.value)" class="taskBtn">Interessant!</button><br>
+	  <button id="btnThinking" value="thinking" onclick="sendButtonMessage(this.value)" class="taskBtn">Thinking…</button><br>
+	  <button id="btnInteresting" value="exciting_fun" onclick="sendButtonMessage(this.value)" class="taskBtn">Interesting!</button><br>
 	</div>
         <div class="div-flex">
-	  <label for="speechText">Hva vil du at roboten skal si?</label><br>
-          <input type="text" class="box" onkeyup="textEntered(event)" id="speechText" placeholder="Skriv teksten her…">
-          <button form="submitForm" onclick="onBtnSend()" class="talkBtn">Si dette nå</button>
+	  <label for="speechText">What do you want the robot to say?</label><br>
+          <input type="text" class="box" onkeyup="textEntered(event)" id="speechText" placeholder="Write text here…">
+          <button form="submitForm" onclick="onBtnSend()" class="talkBtn">Say this now!</button>
         </div>
       </section>
 
       <section>
-	<h2>Oppgaver</h2>
+	<h2>Tasks</h2>
         <!-- Buttons for controlling the task you are working with - control whether you jump to the
              next task or if you try again on the current task. -->
         <div class="div-flex" id="taskBtnsTop">
-          <button id="btnNextTask" value="next_task" onclick="sendButtonMessage(this.value)" class="taskBtn">Neste oppgave</button>
-          <button id="btnTryAgain" value="try_again" onclick="sendButtonMessage(this.value)" class="taskBtn">Prøv igjen</button>
-          <button id="btnSmallCheer" value="small_cheer" onclick="sendButtonMessage(this.value)" class="taskBtn">Riktig!</button>
-          <button id="btnCyberCheer" value="cyberbook_cheer" onclick="sendButtonMessage(this.value)" class="taskBtn">Cyberbook Cheer!</button>
+          <button id="btnNextTask" value="next_task" onclick="sendButtonMessage(this.value)" class="taskBtn">Next task</button>
+          <button id="btnTryAgain" value="try_again" onclick="sendButtonMessage(this.value)" class="taskBtn">Try again</button>
+          <button id="btnSmallCheer" value="small_cheer" onclick="sendButtonMessage(this.value)" class="taskBtn">Correct!</button>
+          <button id="btnCyberCheer" value="cyberbook_cheer" onclick="sendButtonMessage(this.value)" class="taskBtn">Big Cheer!</button>
         </div>
       </section>
 
-      <!-- Buttons for cheering - control whether you do a big or small celebration. -->
+      <!-- Buttons for dancing -->
       <section>
-	<h2>Danser</h2>
+	<h2>Dancing</h2>
         <div id="taskBtnsBottom" class="div-flex">
           <button id="btnRobotDance" value="dance_robot" onclick="sendButtonMessage(this.value)" class="taskBtn">Robot</button>
-	  <button id="btnChickenDance" value="dance_chicken" onclick="sendButtonMessage(this.value)" class="taskBtn">Kylling</button>
+	  <button id="btnChickenDance" value="dance_chicken" onclick="sendButtonMessage(this.value)" class="taskBtn">Chicken</button>
           <button id="btnDiscoDance" value="dance_disco" onclick="sendButtonMessage(this.value)" class="taskBtn">Disco</button>
           <button id="btnMarcarena" value="dance_marcarena" onclick="sendButtonMessage(this.value)" class="taskBtn">Marcarena</button>
-          <button id="btnElectroSwing" value="dance_electroswing" onclick="sendButtonMessage(this.value)" class="taskBtn">Electro Swing</button>
-          <button id="btnGetLucky" value="dance_getlucky" onclick="sendButtonMessage(this.value)" class="taskBtn">Get Lucky</button>
-          <button id="btnThriller" value="dance_spooky" onclick="sendButtonMessage(this.value)" class="taskBtn">Spooky Dance</button>
-          <button id="btnWheels" value="dance_softrobot" onclick="sendButtonMessage(this.value)" class="taskBtn">Soft robot</button>
-          <button id="btnWheels" value="dance_wheels" onclick="sendButtonMessage(this.value)" class="taskBtn">Wheels on the Bus</button>
-          <button id="btnHead" value="dance_hskt" onclick="sendButtonMessage(this.value)" class="taskBtn">Head, Shoulders, Knees, and Toes</button>
-          <button id="btnStars" value="dance_stars" onclick="sendButtonMessage(this.value)" class="taskBtn">Twinkle, Twinkle Little Star</button>
-          <button id="btnHush" value="dance_abc" onclick="sendButtonMessage(this.value)" class="taskBtn">ABC Song</button>
         </div>
       </section>
 
       <section>
-	<h2>Lyd</h2>
+	<h2>Volume</h2>
         <div class="div-flex">
           <!-- Increases/Decreases the volume of NAO's speakers. -->
           <div id="volume">
@@ -109,8 +101,8 @@
           </div>
 	  
 
-          <button id="btnVolDown" title="Lyden ned" aria-label="Lyden ned" class="volumeBtn" onclick="onBtnLMinus()">-</button>
-	  <button id="btnVolUp" title="Lyden opp" aria-label="Lyden opp" class="volumeBtn" onclick="onBtnLPlus()">+</button>
+          <button id="btnVolDown" title="Lower volume" aria-label="Lower volume" class="volumeBtn" onclick="onBtnLMinus()">-</button>
+	  <button id="btnVolUp" title="Raise volume" aria-label="Raise volume" class="volumeBtn" onclick="onBtnLPlus()">+</button>
     <button id="muteButton" class='Toggle' type="button">
       <span class="Toggle__display" hidden>
         <svg width='18' height='14' viewBox='0 0 18 14' fill='none' xmlns='http://www.w3.org/2000/svg' aria-hidden="true" focusable="false" class="Toggle__icon Toggle__icon--checkmark">
@@ -129,7 +121,7 @@
       <section>
 	<h2>Misc</h2>
 	<div class="div-flex">
-          <button id="btnCheck" value="check_connection" onclick="sendButtonMessage(this.value)" class="checkBtn">Sjekk tilkobling</button>
+          <button id="btnCheck" value="check_connection" onclick="sendButtonMessage(this.value)" class="checkBtn">Check connection</button>
           <button id="btnShutdown" value="shutdown" onclick="sendButtonMessage(this.value)" class="shutdownBtn">Shutdown</button>
           <button id="autoButton" class='Toggle' type="button">
             <span class="Toggle__display" hidden>
