--- a/remote-control/nao_server/public/index.html
+++ b/remote-control/nao_server/public/index.html
@@ -42,9 +42,9 @@
       <section>
         <h2>Attitude</h2>
         <div class="div-flex">
-          <button id="btnStand" value="wake_up" onclick="sendButtonMessage(this.value)" class="postureBtn">Stå opp</button>
-	  <button id="btnRaiseHand" value="raise_hand" onclick="sendButtonMessage(this.value)" class="postureBtn">Rekk opp/ned hånd</button>
-          <button id="btnRest" value="rest" onclick="sendButtonMessage(this.value)" class="postureBtn">Slapp av</button>
+          <button id="btnStand" value="wake_up" onclick="sendButtonMessage(this.value)" class="postureBtn">Stand up</button>
+	  <button id="btnRaiseHand" value="raise_hand" onclick="sendButtonMessage(this.value)" class="postureBtn">Raise or lower hand</button>
+          <button id="btnRest" value="rest" onclick="sendButtonMessage(this.value)" class="postureBtn">Rest</button>
         </div>
       </section>
 
